--- a/美团项目/index.html
+++ b/美团项目/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./lib/reset/reset.css">
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./fonts/右箭头/iconfont.css">
 </head>
 
 <body>
@@ -55,14 +56,16 @@
             <div class="searchnav-search">
                 <!-- 输入框 -->
                 <div class="searchnav-input">
-                        <!-- <span>搜索商家或地点</span> -->
+                    <!-- <span>搜索商家或地点</span> -->
                     <input type="text" placeholder="搜索商家或地点">
-                   
+
                 </div>
                 <!-- 按钮 -->
                 <button><img src="./img/搜索.png" alt=""></button>
             </div>
-
+            <div class="searchnav-size">
+                <span>全部分类</span>
+            </div>
             <!-- 热门搜索词 -->
             <div class="searchnav-hotkeys">
                 <a href="#">横店电影城</a>
@@ -71,7 +74,7 @@
                 <a href="#">万达影城</a>
                 <a href="#">韩式汗蒸休闲馆</a>
                 <a href="#">东北酱骨头</a>
-               
+
             </div>
             <!-- 美团功能 -->
             <div class="searchnav-bottom">
@@ -85,8 +88,143 @@
 
         </div>
     </div>
+    <!-- 大盒子 -->
+    <div class="big-box">
+        <!-- 美团服务 -->
+        <div class="serve">
+            <!-- 版心 -->
+            <div class="container">
+                <!-- 左侧下拉列表 -->
+                <div class="serve-select">
+                    <img src="./img/精灵图.png" alt="">
+                    <dl>
+                        <dd><a href="">美食</a><i class="iconfont">&#xe62b;</i></dd>
+                        <dd><a href="">外卖</a><i class="iconfont">&#xe62b;</i></dd>
+                        <dd><a href="">酒店</a><i class="iconfont">&#xe62b;</i></dd>
+                        <dd><a href="">榛果民宿</a><i class="iconfont">&#xe62b;</i></dd>
+                        <dd><a href="">猫眼电影</a><i class="iconfont">&#xe62b;</i></dd>
+                        <dd><a href="">机票 / 火车票</a><i class="iconfont">&#xe62b;</i></dd>
+                        <dd><a href="">休闲娱乐 / KTV</a><i class="iconfont">&#xe62b;</i></dd>
+                        <dd><a href="">生活服务</a><i class="iconfont">&#xe62b;</i></dd>
+                        <dd><a href="">丽人 / 美发/</a><i class="iconfont">&#xe62b;</i></dd>
+                        <dd><a href="">结婚 / 婚纱摄影</a><i class="iconfont">&#xe62b;</i></dd>
+                        <dd><a href="">亲子 / 儿童乐园</a><i class="iconfont">&#xe62b;</i></dd>
+                        <dd><a href="">运动健身</a><i class="iconfont">&#xe62b;</i></dd>
+                        <dd><a href="">家装 / 建材</a><i class="iconfont">&#xe62b;</i></dd>
+                        <dd><a href="">学习培训</a><i class="iconfont">&#xe62b;</i></dd>
+                        <dd><a href="">医院健康 / 宠物</a><i class="iconfont">&#xe62b;</i></dd>
+                        <dd><a href="">酒吧 / 密室逃脱</a><i class="iconfont">&#xe62b;</i></dd>
+                    </dl>
 
+                </div>
+                <!-- 中间的背景图 -->
+                <div class="serve-background">
+                    <a href="">
+                        <img src="./img/点外卖.png" alt="" width="550px" height="240px">
+                        <img src="./img/休闲生活.png" alt="" width="150px" height="240px">
+                        <img src="./img/住酒店.png" alt="" width="270px" height="165px">
+                        <img src="./img/涨姿势.png" alt="" width="270px" height="165px">
+                        <img src="./img/我是商家.png" alt="" width="150px" height="165px">
+                    </a>
+
+                </div>
+                <!-- 右边 -->
+                <div class="serve-right">
+                    <div class="serve-right-top">
+                        <img src="./img/avatar.jpg" alt="">
+                        <p>Hi！ 你好</p>
+                        <a href="">注册</a><br>
+                        <a href="">登录</a>
+                    </div>
+                    <div class="serve-rigth-bottom">
+                        <img src="./img/二维码.png" alt="">
+                        <p>美团APP 手机版</p>
+                        <a href="">1元起</a>
+                        <a href="">吃喝玩乐</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--美食推荐  -->
+        <div class="food">
+            <!-- 版心 -->
+            <div class="container clearfix">
+                <!-- 标题 -->
+                <div class="food-title">
+                    <a href="">有格调</a>
+                    <a href="">全部</a>
+                    <a href="">约会聚餐</a>
+                    <a href="">丽人SPA</a>
+                </div>
+                <!-- 美食盒子 -->
+                <div class="food-box clearfix">
+                    <a href="" class="food-cake">
+                        <img src="./img/顶乐蛋糕.png" alt="">
+                        <h5>顶乐蛋糕</h5>
+                        <p>鲜奶蛋糕1个 约12寸</p>
+                        <span>$50元</span>
+                        <s>门市价 $88</s>
+                    </a>
+                     <a href="" 
+                     class="food-cake">
+                     <img src="./img/Happy.Cake.png" alt="">
+                        <h5>生日双层蛋糕</h5>
+                        <p>美少女专属</p>
+                        <span>$168元</span>
+                        <s>门市价 $188</s>
+                    </a>
+                    <a href="" 
+                    class="food-cake">
+                    <img src="./img/披萨.png" alt="">
+                       <h5>必胜客披萨</h5>
+                       <p>周三半价</p>
+                       <span>$99元</span>
+                       <s>门市价 $188</s>
+                   </a>
+                   <a href="" 
+                   class="food-cake">
+                   <img src="./img/悦品万千.png" alt="">
+                      <h5>悦品万千蛋糕店</h5>
+                      <p>进店办理会员卡享8折优惠</p>
+                      <span>$38元</span>
+                      <s>门市价 $48</s>
+                  </a>
+                  <a href="" 
+                    class="food-cake">
+                    <img src="./img/披萨.png" alt="">
+                       <h5>必胜客披萨</h5>
+                       <p>周三半价</p>
+                       <span>$99元</span>
+                       <s>门市价 $188</s>
+                   </a>
+                   <a href="" 
+                    class="food-cake">
+                    <img src="./img/祝寿.png" alt="">
+                       <h5>特色摇钱树蛋糕</h5>
+                       <p>动物奶油新鲜水果蛋糕</p>
+                       <span>$119元</span>
+                       <s>门市价 $159</s>
+                   </a>
+                </div>
+            </div>
+        </div>
+
+    </div>
 
 </body>
 
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
