--- a/美团项目/index.html
+++ b/美团项目/index.html
@@ -127,7 +127,7 @@
                         <img src="./img/我是商家.png" alt="" width="150px" height="165px">
                     </a>
 
-                </div> 
+                </div>
                 <!-- 右边 -->
                 <div class="serve-right">
                     <div class="serve-right-top">
@@ -165,66 +165,324 @@
                         <span>$50元</span>
                         <s>门市价 $88</s>
                     </a>
-                     <a href="" 
-                     class="food-cake">
-                     <img src="./img/Happy.Cake.png" alt="">
+                    <a href="" class="food-cake">
+                        <img src="./img/Happy.Cake.png" alt="">
                         <h5>生日双层蛋糕</h5>
                         <p>美少女专属</p>
                         <span>$168元</span>
                         <s>门市价 $188</s>
                     </a>
-                    <a href="" 
-                    class="food-cake">
-                    <img src="./img/披萨.png" alt="">
-                       <h5>必胜客披萨</h5>
-                       <p>周三半价</p>
-                       <span>$99元</span>
-                       <s>门市价 $188</s>
-                   </a>
-                   <a href="" 
-                   class="food-cake">
-                   <img src="./img/悦品万千.png" alt="">
-                      <h5>悦品万千蛋糕店</h5>
-                      <p>进店办理会员卡享8折优惠</p>
-                      <span>$38元</span>
-                      <s>门市价 $48</s>
-                  </a>
-                  <a href="" 
-                    class="food-cake">
-                    <img src="./img/披萨.png" alt="">
-                       <h5>必胜客披萨</h5>
-                       <p>周三半价</p>
-                       <span>$99元</span>
-                       <s>门市价 $188</s>
-                   </a>
-                   <a href="" 
-                    class="food-cake">
-                    <img src="./img/祝寿.png" alt="">
-                       <h5>特色摇钱树蛋糕</h5>
-                       <p>动物奶油新鲜水果蛋糕</p>
-                       <span>$119元</span>
-                       <s>门市价 $159</s>
-                   </a>
+                    <a href="" class="food-cake">
+                        <img src="./img/披萨.png" alt="">
+                        <h5>必胜客披萨</h5>
+                        <p>周三半价</p>
+                        <span>$99元</span>
+                        <s>门市价 $188</s>
+                    </a>
+                    <a href="" class="food-cake">
+                        <img src="./img/悦品万千.png" alt="">
+                        <h5>悦品万千蛋糕店</h5>
+                        <p>进店办理会员卡享8折优惠</p>
+                        <span>$38元</span>
+                        <s>门市价 $48</s>
+                    </a>
+                    <a href="" class="food-cake">
+                        <img src="./img/詹姆士芝士排骨.png" alt="">
+                        <h5>詹姆士芝士排骨</h5>
+                        <p>周三半价</p>
+                        <span>$99元</span>
+                        <s>门市价 $188</s>
+                    </a>
+                    <a href="" class="food-cake">
+                        <img src="./img/祝寿.png" alt="">
+                        <h5>特色摇钱树蛋糕</h5>
+                        <p>动物奶油新鲜水果蛋糕</p>
+                        <span>$119元</span>
+                        <s>门市价 $159</s>
+                    </a>
                 </div>
             </div>
         </div>
+        <!-- 电影导航 -->
+        <div class="movie">
+            <!-- 版心 -->
+            <div class="container clearfix">
+                <!-- 标题栏 -->
+                <div class="movie-title clearfix">
+                    <span>猫眼电影</span>
+                    <a href="">正在热映</a>
+                    <a href="">即将上映</a>
+                    <a>查看全部 <i>></i></a>
+                </div>
+                <!-- 盒子 -->
+                <div class="movie-box">
+                    <!-- 图片 -->
+                    <a class="movie-img"></a>
+                    <!-- 文字 -->
+                    <a class="movie-size">
+                        <span>观众评</span><span>7.9</span><br>
+                        <b>俩只老虎</b>
+                        <p>购买</p>
+                    </a>
+                    <a class="movie-size1">
+                        <img src="./img/imax3d.png" alt="" width="78px" height="20px">
+                        <span>观众评</span><span>8.9</span><br>
+                        <b>冰雪奇缘</b>
+                        <p>购买</p>
+                    </a>
+                    <a class="movie-size2">
+                        <span>观众评</span><span>8.6</span><br>
+                        <b>利刃出鞘</b>
+                        <p>购买</p>
+                    </a>
+                    <a class="movie-size3">
+                        <img src="./img/imax3d.png" alt="" width="78px" height="20px">
+                        <span>观众评</span><span>9.3</span><br>
+                        <b>勇者的游戏2</b>
+                        <p>购买</p>
+                    </a>
+                    <a class="movie-size4">
+                        <span>观众评</span><span>7.6</span><br>
+                        <b>一生有你</b>
+                        <p>购买</p>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <!-- 推荐民宿 -->
+        <div class="homestay">
+            <!-- 版心 -->
+            <div class="container clearfix">
+                <!-- 标题 -->
+                <div class="homestay-title">
+                    <a href="">推荐民宿</a>
+                    <a href="">上海</a>
+                    <a href="">南京</a>
+                    <a href="">杭州</a>
+                    <a href="">郑州</a>
+                    <a href="">青岛</a>
+                    <a href="">济南</a>
+                    <a href="">苏州</a>
+                    <a href="">无锡</a>
+                    <a href="">合肥</a>
+                    <a href="">开封</a>
+                    <a href="">查看全部<i>></i></a>
+                </div>
+                <div class="homestay-box">
+                    <!-- 图片 -->
+                    <a class="homestay-img clearfix">
+                        <img src="./img/北欧蓝风格.png" alt="">
+                        <img src="./img/北欧蓝房东.png" alt="">
+                        <h3>北欧蓝风格</h3>
+                        <p>整套一居室 可住3人|浦东外高桥地区</p>
+                        <span>￥ 120</span>
+                    </a>
+                    <a class="homestay-img">
+                        <img src="./img/后街民宿.png" alt="">
+                        <img src="./img/房东1.png" alt="">
+                        <h3>后街民宿</h3>
+                        <p>后街民宿 可住俩人|出门便是商业街</p>
+                        <span>￥ 160</span>
+                    </a>
+                    <a class="homestay-img">
+                        <img src="./img/现代简约轻奢风大床房.png" alt="">
+                        <img src="./img/房东2.png" alt="">
+                        <h3>现代简约轻奢大床风</h3>
+                        <p>装修轻奢 可住2人|迪士尼度假区</p>
+                        <span>￥ 228</span>
+                    </a>
+                    <a class="homestay-img">
+                        <img src="./img/地铁一号线.png" alt="">
+                        <img src="./img/简约房东.png" alt="">
+                        <h3>灰色风格</h3>
+                        <p>整套一居室 可住1人|浦东外高桥地区</p>
+                        <span>￥ 98</span>
+                    </a>
+                    <a class="homestay-img">
+                        <img src="./img/家庭式公寓.png" alt="">
+                        <img src="./img/家庭式公寓房东.png" alt="">
+                        <h3>家庭式公寓</h3>
+                        <p>整套三居室 可住6人|温馨的小家</p>
+                        <span>￥ 299</span>
+                    </a>
+                    <a class="homestay-img">
+                        <img src="./img/少女风.png" alt="">
+                        <img src="./img/夏新.png" alt="">
+                        <h3>夏新的小窝</h3>
+                        <p>整套一居室 可住2人|满足你的少女心</p>
+                        <span>￥ 138</span>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <!-- 猜你喜欢 -->
+        <div class="like">
+            <!-- 版心 -->
+            <div class="container clearfix">
+                <!-- 标题 -->
+                <div class="like-title clearfix">
+                    <span>猜你喜欢</span>
+                    <p>为你甄选最适合的</p>
+                </div>
+                <div class="like-box clearfix">
+                    <!-- 内容 -->
+                    <a class="like-content">
+                        <img src="./img/格林咖啡.png" alt="">
+                        <h5>格林咖啡</h5>
+                        <img src="./img/五角星.png" alt="">
+                        <p>蓝天商贸城</p>
+                        <span>￥</span>
+                        <span>9.9</span><span>起</span>
+                    </a>
+                    <a class="like-content">
+                        <img src="./img/人民食堂.png" alt="">
+                        <h5>人民食堂</h5>
+                        <img src="./img/五角星.png" alt="">
+                        <p>三匹马商业广场</p>
+                        <span>￥</span>
+                        <span>69.9</span><span>起</span>
+                    </a> <a class="like-content">
+                        <img src="./img/俄式厨房.png" alt="">
+                        <h5>俄式厨房</h5>
+                        <img src="./img/满星.png" alt="">
+                        <p>乐之地商业广场</p>
+                        <span>￥</span>
+                        <span>99.9</span><span>起</span>
+                    </a> <a class="like-content">
+                        <img src="./img/烤鸡爪.png" alt="">
+                        <h5>碳烤鸡爪</h5>
+                        <img src="./img/五角星.png" alt="">
+                        <p>中央商城</p>
+                        <span>￥</span>
+                        <span>9.9</span><span>起</span>
+                    </a> <a class="like-content">
+                        <img src="./img/牛排海鲜自助.png" alt="">
+                        <h5>牛排自助</h5>
+                        <img src="./img/五角星.png" alt="">
+                        <p>中央商场</p>
+                        <span>￥</span>
+                        <span>69.9</span><span>起</span>
+                    </a> <a class="like-content">
+                        <img src="./img/盘古烤肉.png" alt="">
+                        <h5>盘古烤肉</h5>
+                        <img src="./img/满星.png" alt="">
+                        <p>蓝天商贸城</p>
+                        <span>￥</span>
+                        <span>39.9</span><span>起</span>
+                    </a> <a class="like-content">
+                        <img src="./img/纸包鱼.png" alt="">
+                        <h5>纸包鱼</h5>
+                        <img src="./img/五角星.png" alt="">
+                        <p>经贸学院店</p>
+                        <span>￥</span>
+                        <span>49.9</span><span>起</span>
+                    </a> <a class="like-content">
+                        <img src="./img/项妃鸭.png" alt="">
+                        <h5>项妃鸭</h5>
+                        <img src="./img/五角星.png" alt="">
+                        <p>经贸学院店</p>
+                        <span>￥</span>
+                        <span>9.9</span><span>起</span>
+                    </a> <a class="like-content">
+                        <img src="./img/项妃鸭奶茶.png" alt="">
+                        <h5>沪上阿姨</h5>
+                        <img src="./img/满星.png" alt="">
+                        <p>蓝天商贸城</p>
+                        <span>￥</span>
+                        <span>9.9</span><span>起</span>
+                    </a> <a class="like-content">
+                        <img src="./img/一品粥.png" alt="">
+                        <h5>一品粥</h5>
+                        <img src="./img/满星.png" alt="">
+                        <p>中央商场</p>
+                        <span>￥</span>
+                        <span>6.9</span><span>起</span>
+                    </a>
+                    <a class="like-content">
+                        <img src="./img/全聚德.png" alt="">
+                        <h5>全聚德考鸭</h5>
+                        <img src="./img/满星.png" alt="">
+                        <p>乐之地商业广场</p>
+                        <span>￥</span>
+                        <span>199.9</span><span>起</span>
+                    </a>
+                    <a class="like-content">
+                        <img src="./img/分米鸡.png" alt="">
+                        <h5>分米鸡</h5>
+                        <img src="./img/五角星.png" alt="">
+                        <p>蓝天商贸城</p>
+                        <span>￥</span>
+                        <span>29.9</span><span>起</span>
+                    </a>
+                    <a class="like-content">
+                        <img src="./img/好伦哥.png" alt="">
+                        <h5>好伦哥</h5>
+                        <img src="./img/五角星.png" alt="">
+                        <p>蓝天商贸城</p>
+                        <span>￥</span>
+                        <span>29.9</span><span>起</span>
+                    </a>
+                    <a class="like-content">
+                        <img src="./img/戈拿旺巴西烤肉.png" alt="">
+                        <h5>巴西烤肉</h5>
+                        <img src="./img/满星.png" alt="">
+                        <p>中央商场</p>
+                        <span>￥</span>
+                        <span>89.9</span><span>起</span>
+                    </a>
+                    <a class="like-content">
+                        <img src="./img/海韵之星邮轮水会.png" alt="">
+                        <h5>海韵之星</h5>
+                        <img src="./img/五角星.png" alt="">
+                        <p>南城</p>
+                        <span>￥</span>
+                        <span>999.9</span><span>起</span>
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <!-- 城市导航 -->
+        <div class="citynav">
+            <!-- 版心 -->
+            <div class="container clearfix">
+                <!-- 左边 -->
+                <div class="citynav-left">
+                    <span>热门城市</span>
+                    <span>热门分类</span>
+                    <span>周边热门</span>
+                </div>
+                <!-- 右边 -->
+                <div class="citynav-right"></div>
+            </div>
+        </div>
+
+
 
     </div>
 
 </body>
 
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<dl>
+    <dd>武汉</dd>
+    <dd>石家庄</dd>
+    <dd>郑州</dd>
+    <dd>昆明</dd>
+    <dd>贵阳</dd>
+    <dd>青岛</dd>
+    <dd>无锡</dd>
+    <dd>成都</dd>
+    <dd>济南</dd>
+    <dd>南京</dd>
+    <dd>重庆</dd>
+    <dd>哈尔滨</dd>
+    <dd>苏州</dd>
+    <dd>上海</dd>
+    <dd>杭州</dd>
+    <dd>广州</dd>
+    <dd>天津</dd>
+    <dd>信阳</dd>
+    <dd>温州</dd>
+    <dd>张家界</dd>
+</dl>
