美团首页完工

--- a/美团项目/index.html
+++ b/美团项目/index.html
@@ -446,16 +446,339 @@
         <div class="citynav">
             <!-- 版心 -->
             <div class="container clearfix">
-                <!-- 左边 -->
-                <div class="citynav-left">
-                    <span>热门城市</span>
-                    <span>热门分类</span>
-                    <span>周边热门</span>
+                <div class="citynav-box">
+                    <!-- 标题 -->
+                    <div class="citynav-title">
+                        <span>美团导航</span>
+                    </div>
+                    <!-- 左边 -->
+                    <div class="citynav-left">
+                        <dl>
+                            <dd>热门城市</dd>
+                            <dd>热门分类</dd>
+                            <dd>周边热门</dd>
+                        </dl>
+                    </div>
+                    <!-- 右边 -->
+                    <div class="citynav-right clearfix">
+                        <dl>
+                            <a href="">
+                                <dd>武汉</dd>
+                            </a>
+                            <a href="">
+                                <dd>石家庄</dd>
+                            </a>
+                            <a href="">
+                                <dd>郑州</dd>
+                            </a>
+                            <a href="">
+                                <dd>昆明</dd>
+                            </a>
+                            <a href="">
+                                <dd>贵阳</dd>
+                            </a>
+                            <a href="">
+                                <dd>青岛</dd>
+                            </a>
+                            <a href="">
+                                <dd>无锡</dd>
+                            </a>
+                            <a href="">
+                                <dd>成都</dd>
+                            </a>
+                            <a href="">
+                                <dd>济南</dd>
+                            </a>
+                            <a href="">
+                                <dd>南京</dd>
+                            </a>
+                            <a href="">
+                                <dd>重庆</dd>
+                            </a>
+                            <a href="">
+                                <dd>哈尔滨</dd>
+                            </a>
+                            <a href="">
+                                <dd>苏州</dd>
+                            </a>
+                            <a href="">
+                                <dd>上海</dd>
+                            </a>
+                            <a href="">
+                                <dd>杭州</dd>
+                            </a>
+                            <a href="">
+                                <dd>广州</dd>
+                            </a>
+                            <a href="">
+                                <dd>天津</dd>
+                            </a>
+                            <a href="">
+                                <dd>信阳</dd>
+                            </a>
+                            <a href="">
+                                <dd>温州</dd>
+                            </a>
+                            <a href="">
+                                <dd>张家界</dd>
+                            </a>
+                        </dl>
+                        <dl>
+                            <a href="">
+                                <dd>酒店</dd>
+                            </a>
+                            <a href="">
+                                <dd>美食</dd>
+                            </a>
+                            <a href="">
+                                <dd>医疗</dd>
+                            </a>
+                            <a href="">
+                                <dd>宠物</dd>
+                            </a>
+                            <a href="">
+                                <dd>游戏</dd>
+                            </a>
+                            <a href="">
+                                <dd>购物</dd>
+                            </a>
+                            <a href="">
+                                <dd>结婚</dd>
+                            </a>
+                            <a href="">
+                                <dd>家装</dd>
+                            </a>
+                            <a href="">
+                                <dd>宴会</dd>
+                            </a>
+                            <a href="">
+                                <dd>丽人</dd>
+                            </a>
+                            <a href="">
+                                <dd>学习培训</dd>
+                            </a>
+                            <a href="">
+                                <dd>母婴亲子</dd>
+                            </a>
+                            <a href="">
+                                <dd>汽车服务</dd>
+                            </a>
+                            <a href="">
+                                <dd>休闲娱乐</dd>
+                            </a>
+                            <a href="">
+                                <dd>运动健身</dd>
+                            </a>
+                            <a href="">
+                                <dd>生活服务</dd>
+                            </a>
+                            <a href="">
+                                <dd>上门服务</dd>
+                            </a>
+                            <a href="">
+                                <dd>时尚购</dd>
+                            </a>
+                            <a href="">
+                                <dd>本地购物</dd>
+                            </a>
+                            <a href="">
+                                <dd>摄影写真</dd>
+                            </a>
+                        </dl>
+                        <dl>
+                            <a href="">
+                                <dd>东海酒店</dd>
+                            </a>
+                            <a href="">
+                                <dd>中州国际</dd>
+                            </a>
+                            <a href="">
+                                <dd>宿迁美食</dd>
+                            </a>
+                            <a href="">
+                                <dd>中央商场</dd>
+                            </a>
+                            <a href="">
+                                <dd>乐之地</dd>
+                            </a>
+                            <a href="">
+                                <dd>虾锅蟹煲</dd>
+                            </a>
+                            <a href="">
+                                <dd>居然之家</dd>
+                            </a>
+                            <a href="">
+                                <dd>宿迁医疗</dd>
+                            </a>
+                            <a href="">
+                                <dd>宿迁汽车</dd>
+                            </a>
+                            <a href="">
+                                <dd>宠物之家</dd>
+                            </a>
+                            <a href="">
+                                <dd>宿迁购物</dd>
+                            </a>
+                            <a href="">
+                                <dd>运动健身</dd>
+                            </a>
+                            <a href="">
+                                <dd>学习培训</dd>
+                            </a>
+                            <a href="">
+                                <dd>宿迁休闲</dd>
+                            </a>
+                            <a href="">
+                                <dd>宿迁母婴亲子</dd>
+                            </a>
+                            <a href="">
+                                <dd>东海上门服务</dd>
+                            </a>
+                            <a href="">
+                                <dd>宿迁时尚购</dd>
+                            </a>
+                            <a href="">
+                                <dd>宿迁摄影写真</dd>
+                            </a>
+                            <a href="">
+                                <dd>东海丽人</dd>
+                            </a>
+                        </dl>
+                    </div>
                 </div>
-                <!-- 右边 -->
-                <div class="citynav-right"></div>
             </div>
         </div>
+        <!-- 美团服务 -->
+        <div class="meituan-server">
+            <!-- 版心 -->
+            <div class="container clearfix">
+                <!-- 内容 -->
+                <div class="meituan-server-content clearfix">
+                    <dl>
+                        <dt>用户帮助</dt>
+                        <dd><a href="">申请退款</a></dd>
+                        <dd><a href="">查看美团券</a></dd>
+                        <dd><a href="">常见问题</a></dd>
+                        <dd><a href="">用户协议</a></dd>
+                        <dd><a href="">隐私政策</a></dd>
+                        <dd><a href="">反诈骗公告</a></dd>
+                        <dd><a href="">消费者权益</a></dd>
+                    </dl>
+                    <dl>
+                        <dt><a href="">美团服务</a></dt>
+                        <dd><a href="">美团外卖</a></dd>
+                        <dd><a href="">美团酒店</a></dd>
+                        <dd><a href="">猫眼电影</a></dd>
+                        <dd><a href="">美团配送</a></dd>
+                        <dd><a href="">美团云/</a>
+                        <dd>
+                        <dd><a href="">大众点评</a></dd>
+                        <dd><a href="">美团民宿</a></dd>
+                        <dd><a href="">无人配送</a></dd>
+                    </dl>
+                    <dl>
+                        <dt>商家合作</dt>
+                        <dd><a href="">美团餐饮商户中心</a></dd>
+                        <dd><a href="">美食商家入驻</a></dd>
+                        <dd><a href="">美团外卖开店申请</a></dd>
+                        <dd><a href="">美团收银官网</a></dd>
+                        <dd><a href="">外卖配送加盟申请</a></dd>
+                        <dd><a href="">美团点评餐饮学院</a></dd>
+                        <dd><a href="">酒店商家入驻</a></dd>
+                        <dd><a href="">境内度假商家入驻</a></dd>
+                        <dd><a href="">综合商家入驻</a></dd>
+                        <dd><a href="">美团民宿房东商家入驻</a></dd>
+                        <dd><a href="">商家开票申请</a></dd>
+                        <dd><a href="">美团点评智能收银机</a></dd>
+                        <dd><a href="">美团点评餐饮开放平台</a></dd>
+                        <dd><a href="">美团点评收单</a></dd>
+                        <dd><a href="">免费使用美团排队</a></dd>
+                        <dd><a href="">快驴进货商家合作</a></dd>
+                        <dd><a href="">美团闪购商家入驻</a></dd>
+                    </dl>
+                    <dl>
+                        <dt>代理商加盟</dt>
+                        <dd><a href="">美团外卖代理商招募</a></dd>
+                        <dd><a href="">到店餐饮代理商招募</a></dd>
+                        <dd><a href="">非餐饮代理商招募</a></dd>
+                        <dd><a href="">美团联盟</a></dd>
+                        <dd><a href="">美团收银招募上分销商</a></dd>
+                        <dd><a href="">美团点评5S服务商招募</a></dd>
+                        <dd><a href="">美团收单渠道代理商招募</a></dd>
+                    </dl>
+                    <dl>
+                        <dt><a href="">美团规则</a></dt>
+                        <dd><a href="">规则中心</a></dd>
+                        <dd><a href="">规则目录</a></dd>
+                        <dd><a href="">规则评议院</a></dd>
+                    </dl>
+                    <dl>
+                        <dt>关注美团</dt>
+                        <dd><a href="">美团新浪微博</a></dd>
+                    </dl>
+                    <dl>
+                        <dt>公司信息</dt>
+                        <dd><a href="">关于我们</a></dd>
+                        <dd><a href="">投资者关系</a></dd>
+                        <dd><a href="">加入我们</a></dd>
+                        <dd><a href="">商户诚信公约及管理办法</a></dd>
+                        <dd><a href="">保险经纪资质</a></dd>
+                    </dl>
+                    <dl>
+                        <dt>廉政举报</dt>
+                        <dd><a href="">廉政邮箱</a></dd>
+                    </dl>
+                    <dl>
+                        <dt>消费者服务热线</dt>
+                        <dd><a href="">外卖消费者: 10109777</a></dd>
+                        <dd><a href="">猫眼消费者: 10105335</a></dd>
+                        <dd><a href="">其他消费者: 10107888</a></dd>
+                    </dl>
+                    <dl>
+                        <dt>商家服务热线</dt>
+                        <dd><a href="">外卖&餐饮商家: 10105557</a></dd>
+                        <dd><a href="">休闲娱乐、丽人、ktv、教育、亲子<br> 结婚、、家装等商家: 10100107</a></dd>
+                    </dl>
+                    <dl>
+                        <dt>投诉举报热线</dt>
+                        <dd><a href="">违法和不良信息举报电话: 4006018900</a></dd>
+                        <dd><a href="">举报邮箱tousujubao@meituan.com</a></dd>
+                    </dl>
+                    <dl>
+                        <dt><a href="">商家自助入驻美团入口</a> <br></dt>
+                    </dl>
+                    <dl>
+                        <dt><a href="">供应商注册入口</a></dt>
+                    </dl>
+                </div>
+            </div>
+        </div>
+        <!-- 关于美团 -->
+        <div class="meituan-about">
+            <!-- 版心 -->
+            <div class="container">
+                <!-- 左边 -->
+                <div class="meituan-about-left">
+                    <span>©美团网团购 meituan.com</span>
+                    <a href="">京ICP证070791号</a>
+                    <a href="">京ICP备10211739号</a><br>
+                    <a href="">广播电视节目制作经营许可证（京）字第03889号</a><br>
+                    <a href="">食品经营许可证</a><a href="">互联网药品信息服务资格证</a><br>
+                    <a href="">医疗器械网络交易服务第三方平台备案：（京）网械平台备字[2018]第00004号</a>
+                </div>
+                <!-- 右边 -->
+                <div class="meituan-about-right">
+                    <a href="">京公网安备11010502025545号</a>
+                    <img src="./img/电子执照.png" alt="" title="营业执照" width="38px">
+                    <a href="" class="zhizhao">北京三快科技有限公司</a>
+                    <a href="" class=".tupian1"><img src="./img/经营信息.png" alt="" title="备案信息" width="108px"></a>
+                    <a href="" class=".tupian2"><img src="./img/可信网站.png" alt="" title="可信任网站认证" width="108px"></a>
+                    <a href="" class=".tupian3"><img src="./img/12135.png" alt="" title="12135消费争议" width="108px"></a>
+                </div>
+            </div>
+        </div>
+
+
 
 
 
@@ -464,25 +787,3 @@
 </body>
 
 </html>
-<dl>
-    <dd>武汉</dd>
-    <dd>石家庄</dd>
-    <dd>郑州</dd>
-    <dd>昆明</dd>
-    <dd>贵阳</dd>
-    <dd>青岛</dd>
-    <dd>无锡</dd>
-    <dd>成都</dd>
-    <dd>济南</dd>
-    <dd>南京</dd>
-    <dd>重庆</dd>
-    <dd>哈尔滨</dd>
-    <dd>苏州</dd>
-    <dd>上海</dd>
-    <dd>杭州</dd>
-    <dd>广州</dd>
-    <dd>天津</dd>
-    <dd>信阳</dd>
-    <dd>温州</dd>
-    <dd>张家界</dd>
-</dl>
