--- a/美团项目/index.html
+++ b/美团项目/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+      
     <!-- 顶部导航栏 -->
     <div class="topnav">
         <!-- 版心 -->
@@ -22,11 +23,11 @@
                 <img src="./img/定位.png" alt="">
                 <span>宿迁</span>
                 <a href="#">切换城市</a>
-                <a href="#">
+                <div class="topnav-left-rifht">
                     <a href="#">[ 睢宁</a>
                     <a href="#"> 泗阳</a>
                     <a href="#"> 新沂 ]</a>
-                </a>
+                </div>
 
                 <!-- 立即登陆与注册 -->
                 <div class="topnav-left-size">
@@ -61,7 +62,7 @@
 
                 </div>
                 <!-- 按钮 -->
-                <button><img src="./img/搜索.png" alt=""></button>
+                <button><img src="./img/searchnav.png" alt=""></button>
             </div>
             <div class="searchnav-size">
                 <span>全部分类</span>
@@ -96,7 +97,7 @@
             <div class="container">
                 <!-- 左侧下拉列表 -->
                 <div class="serve-select">
-                    <img src="./img/精灵图.png" alt="">
+                    <img src="./img/longimg.png" alt="">
                     <dl>
                         <dd><a href="">美食</a><i class="iconfont">&#xe62b;</i></dd>
                         <dd><a href="">外卖</a><i class="iconfont">&#xe62b;</i></dd>
@@ -118,13 +119,13 @@
 
                 </div>
                 <!-- 中间的背景图 -->
-                <div class="serve-background">
+                <div class="serve-advertising">
                     <a href="">
-                        <img src="./img/点外卖.png" alt="" width="550px" height="240px">
-                        <img src="./img/休闲生活.png" alt="" width="150px" height="240px">
-                        <img src="./img/住酒店.png" alt="" width="270px" height="165px">
-                        <img src="./img/涨姿势.png" alt="" width="270px" height="165px">
-                        <img src="./img/我是商家.png" alt="" width="150px" height="165px">
+                        <img src="./img/takeout.png" alt="" width="550px" height="240px">
+                        <img src="./img/life.png" alt="" width="150px" height="240px">
+                        <img src="./img/hotel.png" alt="" width="270px" height="165px">
+                        <img src="./img/knowledge.png" alt="" width="270px" height="165px">
+                        <img src="./img/business.png" alt="" width="150px" height="165px">
                     </a>
 
                 </div>
@@ -137,7 +138,7 @@
                         <a href="">登录</a>
                     </div>
                     <div class="serve-rigth-bottom">
-                        <img src="./img/二维码.png" alt="">
+                        <img src="./img/QR-code.png" alt="">
                         <p>美团APP 手机版</p>
                         <a href="">1元起</a>
                         <a href="">吃喝玩乐</a>
@@ -159,7 +160,7 @@
                 <!-- 美食盒子 -->
                 <div class="food-box clearfix">
                     <a href="" class="food-cake">
-                        <img src="./img/顶乐蛋糕.png" alt="">
+                        <img src="./img/le-cake.png" alt="">
                         <h5>顶乐蛋糕</h5>
                         <p>鲜奶蛋糕1个 约12寸</p>
                         <span>$50元</span>
@@ -173,28 +174,28 @@
                         <s>门市价 $188</s>
                     </a>
                     <a href="" class="food-cake">
-                        <img src="./img/披萨.png" alt="">
+                        <img src="./img/pizza.png" alt="">
                         <h5>必胜客披萨</h5>
                         <p>周三半价</p>
                         <span>$99元</span>
                         <s>门市价 $188</s>
                     </a>
                     <a href="" class="food-cake">
-                        <img src="./img/悦品万千.png" alt="">
+                        <img src="./img/yuepin.png" alt="">
                         <h5>悦品万千蛋糕店</h5>
                         <p>进店办理会员卡享8折优惠</p>
                         <span>$38元</span>
                         <s>门市价 $48</s>
                     </a>
                     <a href="" class="food-cake">
-                        <img src="./img/詹姆士芝士排骨.png" alt="">
+                        <img src="./img/ribs.png" alt="">
                         <h5>詹姆士芝士排骨</h5>
                         <p>周三半价</p>
                         <span>$99元</span>
                         <s>门市价 $188</s>
                     </a>
                     <a href="" class="food-cake">
-                        <img src="./img/祝寿.png" alt="">
+                        <img src="./img/longevity.png" alt="">
                         <h5>特色摇钱树蛋糕</h5>
                         <p>动物奶油新鲜水果蛋糕</p>
                         <span>$119元</span>
@@ -271,43 +272,43 @@
                 <div class="homestay-box">
                     <!-- 图片 -->
                     <a class="homestay-img clearfix">
-                        <img src="./img/北欧蓝风格.png" alt="">
-                        <img src="./img/北欧蓝房东.png" alt="">
+                        <img src="./img/north-style.png" alt="">
+                        <img src="./img/landlord1.png" alt="">
                         <h3>北欧蓝风格</h3>
                         <p>整套一居室 可住3人|浦东外高桥地区</p>
                         <span>￥ 120</span>
                     </a>
                     <a class="homestay-img">
-                        <img src="./img/后街民宿.png" alt="">
-                        <img src="./img/房东1.png" alt="">
+                        <img src="./img/backstreet.png" alt="">
+                        <img src="./img/landlord2.png" alt="">
                         <h3>后街民宿</h3>
                         <p>后街民宿 可住俩人|出门便是商业街</p>
                         <span>￥ 160</span>
                     </a>
                     <a class="homestay-img">
-                        <img src="./img/现代简约轻奢风大床房.png" alt="">
-                        <img src="./img/房东2.png" alt="">
+                        <img src="./img/big-bed.png" alt="">
+                        <img src="./img/landlord3.png" alt="">
                         <h3>现代简约轻奢大床风</h3>
                         <p>装修轻奢 可住2人|迪士尼度假区</p>
                         <span>￥ 228</span>
                     </a>
                     <a class="homestay-img">
-                        <img src="./img/地铁一号线.png" alt="">
-                        <img src="./img/简约房东.png" alt="">
+                        <img src="./img/metro.png" alt="">
+                        <img src="./img/landlord4.png" alt="">
                         <h3>灰色风格</h3>
                         <p>整套一居室 可住1人|浦东外高桥地区</p>
                         <span>￥ 98</span>
                     </a>
                     <a class="homestay-img">
-                        <img src="./img/家庭式公寓.png" alt="">
-                        <img src="./img/家庭式公寓房东.png" alt="">
+                        <img src="./img/house-bed.png" alt="">
+                        <img src="./img/landlord5.png" alt="">
                         <h3>家庭式公寓</h3>
                         <p>整套三居室 可住6人|温馨的小家</p>
                         <span>￥ 299</span>
                     </a>
                     <a class="homestay-img">
-                        <img src="./img/少女风.png" alt="">
-                        <img src="./img/夏新.png" alt="">
+                        <img src="./img/pink-style.png" alt="">
+                        <img src="./img/baby.png" alt="">
                         <h3>夏新的小窝</h3>
                         <p>整套一居室 可住2人|满足你的少女心</p>
                         <span>￥ 138</span>
@@ -327,113 +328,113 @@
                 <div class="like-box clearfix">
                     <!-- 内容 -->
                     <a class="like-content">
-                        <img src="./img/格林咖啡.png" alt="">
+                        <img src="./img/gelin-coffee.png" alt="">
                         <h5>格林咖啡</h5>
-                        <img src="./img/五角星.png" alt="">
+                        <img src="./img/five-start.png" alt="">
                         <p>蓝天商贸城</p>
                         <span>￥</span>
                         <span>9.9</span><span>起</span>
                     </a>
                     <a class="like-content">
-                        <img src="./img/人民食堂.png" alt="">
+                        <img src="./img/peopele-canteen.png" alt="">
                         <h5>人民食堂</h5>
-                        <img src="./img/五角星.png" alt="">
+                        <img src="./img/five-start.png" alt="">
                         <p>三匹马商业广场</p>
                         <span>￥</span>
                         <span>69.9</span><span>起</span>
                     </a> <a class="like-content">
-                        <img src="./img/俄式厨房.png" alt="">
+                        <img src="./img/cook.png" alt="">
                         <h5>俄式厨房</h5>
-                        <img src="./img/满星.png" alt="">
+                        <img src="./img/full-start.png" alt="">
                         <p>乐之地商业广场</p>
                         <span>￥</span>
                         <span>99.9</span><span>起</span>
                     </a> <a class="like-content">
-                        <img src="./img/烤鸡爪.png" alt="">
+                        <img src="./img/chicket.png" alt="">
                         <h5>碳烤鸡爪</h5>
-                        <img src="./img/五角星.png" alt="">
+                        <img src="./img/five-start.png" alt="">
                         <p>中央商城</p>
                         <span>￥</span>
                         <span>9.9</span><span>起</span>
                     </a> <a class="like-content">
-                        <img src="./img/牛排海鲜自助.png" alt="">
+                        <img src="./img/steak.png" alt="">
                         <h5>牛排自助</h5>
-                        <img src="./img/五角星.png" alt="">
+                        <img src="./img/five-start.png" alt="">
                         <p>中央商场</p>
                         <span>￥</span>
                         <span>69.9</span><span>起</span>
                     </a> <a class="like-content">
-                        <img src="./img/盘古烤肉.png" alt="">
+                        <img src="./img/PanGu.png" alt="">
                         <h5>盘古烤肉</h5>
-                        <img src="./img/满星.png" alt="">
+                        <img src="./img/full-start.png" alt="">
                         <p>蓝天商贸城</p>
                         <span>￥</span>
                         <span>39.9</span><span>起</span>
                     </a> <a class="like-content">
-                        <img src="./img/纸包鱼.png" alt="">
+                        <img src="./img/fish.png" alt="">
                         <h5>纸包鱼</h5>
-                        <img src="./img/五角星.png" alt="">
+                        <img src="./img/five-start.png" alt="">
                         <p>经贸学院店</p>
                         <span>￥</span>
                         <span>49.9</span><span>起</span>
                     </a> <a class="like-content">
-                        <img src="./img/项妃鸭.png" alt="">
+                        <img src="./img/duck.png" alt="">
                         <h5>项妃鸭</h5>
-                        <img src="./img/五角星.png" alt="">
+                        <img src="./img/five-start.png" alt="">
                         <p>经贸学院店</p>
                         <span>￥</span>
                         <span>9.9</span><span>起</span>
                     </a> <a class="like-content">
-                        <img src="./img/项妃鸭奶茶.png" alt="">
+                        <img src="./img/mikly-tea.png" alt="">
                         <h5>沪上阿姨</h5>
-                        <img src="./img/满星.png" alt="">
+                        <img src="./img/full-start.png" alt="">
                         <p>蓝天商贸城</p>
                         <span>￥</span>
                         <span>9.9</span><span>起</span>
                     </a> <a class="like-content">
-                        <img src="./img/一品粥.png" alt="">
+                        <img src="./img/porridge.png" alt="">
                         <h5>一品粥</h5>
-                        <img src="./img/满星.png" alt="">
+                        <img src="./img/full-start.png" alt="">
                         <p>中央商场</p>
                         <span>￥</span>
                         <span>6.9</span><span>起</span>
                     </a>
                     <a class="like-content">
-                        <img src="./img/全聚德.png" alt="">
+                        <img src="./img/roast-duck.png" alt="">
                         <h5>全聚德考鸭</h5>
-                        <img src="./img/满星.png" alt="">
+                        <img src="./img/full-start.png" alt="">
                         <p>乐之地商业广场</p>
                         <span>￥</span>
                         <span>199.9</span><span>起</span>
                     </a>
                     <a class="like-content">
-                        <img src="./img/分米鸡.png" alt="">
+                        <img src="./img/chicken.png" alt="">
                         <h5>分米鸡</h5>
-                        <img src="./img/五角星.png" alt="">
+                        <img src="./img/five-start.png" alt="">
                         <p>蓝天商贸城</p>
                         <span>￥</span>
                         <span>29.9</span><span>起</span>
                     </a>
                     <a class="like-content">
-                        <img src="./img/好伦哥.png" alt="">
+                        <img src="./img/ggg.png" alt="">
                         <h5>好伦哥</h5>
-                        <img src="./img/五角星.png" alt="">
+                        <img src="./img/five-start.png" alt="">
                         <p>蓝天商贸城</p>
                         <span>￥</span>
                         <span>29.9</span><span>起</span>
                     </a>
                     <a class="like-content">
-                        <img src="./img/戈拿旺巴西烤肉.png" alt="">
+                        <img src="./img/kabob.png" alt="">
                         <h5>巴西烤肉</h5>
-                        <img src="./img/满星.png" alt="">
+                        <img src="./img/full-start.png" alt="">
                         <p>中央商场</p>
                         <span>￥</span>
                         <span>89.9</span><span>起</span>
                     </a>
                     <a class="like-content">
-                        <img src="./img/海韵之星邮轮水会.png" alt="">
+                        <img src="./img/water.png" alt="">
                         <h5>海韵之星</h5>
-                        <img src="./img/五角星.png" alt="">
+                        <img src="./img/full-start.png" alt="">
                         <p>南城</p>
                         <span>￥</span>
                         <span>999.9</span><span>起</span>
@@ -771,8 +772,8 @@
                     <a href="">京公网安备11010502025545号</a>
                     <img src="./img/电子执照.png" alt="" title="营业执照" width="38px">
                     <a href="" class="zhizhao">北京三快科技有限公司</a>
-                    <a href="" class=".tupian1"><img src="./img/经营信息.png" alt="" title="备案信息" width="108px"></a>
-                    <a href="" class=".tupian2"><img src="./img/可信网站.png" alt="" title="可信任网站认证" width="108px"></a>
+                    <a href="" class=".tupian1"><img src="./img/manage.png" alt="" title="备案信息" width="108px"></a>
+                    <a href="" class=".tupian2"><img src="./img/dependable.png" alt="" title="可信任网站认证" width="108px"></a>
                     <a href="" class=".tupian3"><img src="./img/12135.png" alt="" title="12135消费争议" width="108px"></a>
                 </div>
             </div>
