--- a/美团项目/index1.html
+++ b/美团项目/index1.html
@@ -61,51 +61,119 @@
             <div class="ishit-content clearfix">
                 <!-- 标题 -->
                 <div class="ishit-title clearfix">
-                   <span>正在热映</span><span>（21部）</span>
-                   <img src="./img/right-red.png" alt=""><a href="#">全部</a>
+                    <span>正在热映</span><span>（21部）</span>
+                    <img src="./img/right-red.png" alt=""><a href="#">全部</a>
                 </div>
                 <!-- 下部分 -->
                 <div class="ishit-bottom">
-                 <a href=""> 
+                    <a href="">
                         <h5>俩只老虎</h5>
                         <span>8</span>
                         <span>7.</span>
                         <b>购票</b>
-                 </a>
-                 <a href=""> 
+                    </a>
+                    <a href="">
                         <h5>勇者的游戏2</h5>
                         <b>购票</b>
-                 </a>
-                 <a href=""> 
+                    </a>
+                    <a href="">
                         <h5>南方车站的聚会</h5>
                         <b>购票</b>
-                 </a>
-                 <a href=""> 
+                    </a>
+                    <a href="">
                         <h5>利刃出鞘</h5>
                         <b>购票</b>
-                 </a>
-                 <a href=""> 
+                    </a>
+                    <a href="">
                         <h5>冰雪奇缘2</h5>
                         <span>9</span>
                         <span>8.</span>
                         <b>购票</b>
-                 </a>
-                 <a href=""> 
+                    </a>
+                    <a href="">
                         <h5>吹哨人</h5>
                         <b>购票</b>
-                 </a>
-                 <a href=""> 
+                    </a>
+                    <a href="">
                         <h5>星际探索</h5>
                         <b>购票</b>
-                 </a>
-                 <a href=""> 
+                    </a>
+                    <a href="">
                         <h5>一生有你</h5>
                         <b>购票</b>
-                 </a>
+                    </a>
                 </div>
             </div>
+            <!-- 今日票房 -->
+            <div class="today">
+                <!-- 标题 -->
+                <div class="today-title">
+                    <span>今日票房</span>
+                </div>
+                <!-- 第一行 -->
+                <a class="today-content-one">
+                    <img src="./img/today.png" alt="">
+                    <span>俩只老虎</span><br>
+                    <span>788.88万</span>
+                </a>
+                <!-- 内容 -->
+                <div class="today-content">
+
+                    <a href="" class="today-content-size">
+                        <h5>2</h5>
+                        <span>利刃出鞘</span>
+                        <p>686.31万</p>
+                    </a>
+                    <a href="" class="today-content-size">
+                        <h5>3</h5>
+                        <span>俩只老虎</span>
+                        <p>222.36万</p>
+                    </a>
+                    <a href="" class="today-content-size">
+                        <h5>3</h5>
+                        <span>冰雪奇缘2</span>
+                        <p>220.12万</p>
+                    </a>
+                    <a href="" class="today-content-size">
+                        <h5>4</h5>
+                        <span>星际探索</span>
+                        <p>116.23万</p>
+                    </a>
+                    <a href="" class="today-content-size">
+                        <h5>5</h5>
+                        <span>一生有你</span>
+                        <p>46.32万</p>
+                    </a>
+                    <a href="" class="today-content-size">
+                        <h5>7</h5>
+                        <span>误杀</span>
+                        <p>23.12万</p>
+                    </a>
+                    <a href="" class="today-content-size">
+                        <h5>8</h5>
+                        <span>大约在冬季</span>
+                        <p>22.11万</p>
+                    </a>
+                    <a href="" class="today-content-size">
+                            <h5>9</h5>
+                            <span>决战中途岛</span>
+                            <p>18.31万</p>
+                        </a>
+                        <a href="" class="today-content-size">
+                                <h5>10</h5>
+                                <span>平原上的夏洛克</span>
+                                <p>12.11万</p>
+                            </a>
+        
+                </div>
+
+            </div>
+
         </div>
     </div>
+
+
+
 
 
 
