--- a/美团项目/index1.html
+++ b/美团项目/index1.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>猫眼电影 - 一网打尽好电影</title>
     <link rel="stylesheet" href="./lib/reset/reset.css">
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/index1.css">
@@ -155,22 +155,133 @@
                         <p>22.11万</p>
                     </a>
                     <a href="" class="today-content-size">
-                            <h5>9</h5>
-                            <span>决战中途岛</span>
-                            <p>18.31万</p>
-                        </a>
-                        <a href="" class="today-content-size">
-                                <h5>10</h5>
-                                <span>平原上的夏洛克</span>
-                                <p>12.11万</p>
-                            </a>
-        
-                </div> 
-
+                        <h5>9</h5>
+                        <span>决战中途岛</span>
+                        <p>18.31万</p>
+                    </a>
+                    <a href="" class="today-content-size">
+                        <h5>10</h5>
+                        <span>平原上的夏洛克</span>
+                        <p>12.11万</p>
+                    </a>
+                    <!-- 今日大盘 -->
+                    <div class="today-market">
+                        <!-- 左边 -->
+                        <div class="today-market-left">
+                            <h3>今日大盘</h3>
+                        </div>
+                        <!-- 右边上部分 -->
+                        <div class="today-market-right-top">
+                            <span>4848.6</span><span>万</span>
+                            <a href="">查看更多 <img src="./img/right-red.png" alt=""></a>
+                        </div>
+                        <!-- 右边下部分 -->
+                        <div class="today-market-right-bottom">
+                            <span>北京时间 08:49:53</span>
+                            <span>猫眼专业版实时票房数据</span>
+                        </div>
+                    </div>
+                </div>
             </div>
-
         </div>
     </div>
+    <!-- 即将上映 -->
+    <div class="coming-soon">
+        <!-- 版心 -->
+        <div class="container clearfix">
+            <!-- 内容 -->
+            <div class="coming-soon-content">
+                <!-- 标题 -->
+                <div class="coming-soon-title">
+                    <span>即将上映</span><span>（156部）</span>
+                    <img src="./img/right-blue.png" alt=""><a href="#">全部</a>
+                </div>
+                <!-- 下部分 -->
+                <div class="coming-soon-bottom">
+                    <a href="">
+                        <h5>若能与你共乘海浪之上</h5>
+                        <h4>93151人想看</h4>
+                        <div class="coming-soon-bottom-box">
+                            <h3>预告片</h3>
+                            <h2>预售</h2>
+                        </div>
+                        <span>12月7日上映</span>
+                    </a>
+                    <a href="">
+                        <h5>兰心大剧院</h5>
+                        <h4>27209人想看</h4>
+                        <div class="coming-soon-bottom-box">
+                            <h3>预告片</h3>
+                            <h2>预售</h2>
+                        </div>
+                        <span>12月7日上映</span>
+                    </a>
+                    <a href="">
+                        <h5>老伴，让我们再爱一次</h5>
+                        <h4>1005人想看</h4>
+                        <div class="coming-soon-bottom-box">
+                            <h3>预告片</h3>
+                            <h2>预售</h2>
+                        </div>
+                        <span>12月8日上映</span>
+                    </a>
+                    <a href="">
+                        <h5>那时风华</h5>
+                        <h4>181人想看</h4>
+                        <div class="coming-soon-bottom-box">
+                            <h3>预告片</h3>
+                            <h2>预售</h2>
+                        </div>
+                        <span>12月9日上映</span>
+                    </a>
+
+                    <a href="">
+                        <h5>天火</h5>
+                        <h4>24887人想看</h4>
+                        <div class="coming-soon-bottom-box">
+                            <h3>预告片</h3>
+                            <h2>预售</h2>
+                        </div>
+                        <span>12月12日上映</span>
+                    </a>
+                    <a href="">
+                        <h5>西河恋歌</h5>
+                        <h4>3135人想看</h4>
+                        <div class="coming-soon-bottom-box">
+                            <h3>预告片</h3>
+                            <h2>预售</h2>
+                        </div>
+                        <span>12月12日上映</span>
+                    </a>
+                    <a href="">
+                        <h5>卡壳</h5>
+                        <h4>1015人想看</h4>
+                        <div class="coming-soon-bottom-box">
+                            <h3>预告片</h3>
+                            <h2>预售</h2>
+                        </div>
+                        <span>12月12日上映</span>
+                    </a>
+                    <a href="">
+                        <h5>被时光抓走的人</h5>
+                        <h4>25803人想看</h4>
+                        <div class="coming-soon-bottom-box">
+                            <h3>预告片</h3>
+                            <h2>预售</h2>
+                        </div>
+                        <span>12月13日上映</span>
+                    </a>
+                </div>
+            </div>
+            <!-- 最受期待 -->
+            <div class="have-the-call"></div>
+            <!-- 标题 -->
+            <!-- 内容 -->
+            <!-- 第一行 -->
+        </div>
+    </div>
+
+
 
 
 
