--- a/美团项目/index1.html
+++ b/美团项目/index1.html
@@ -160,7 +160,7 @@
                         <p>18.31万</p>
                     </a>
                     <a href="" class="today-content-size">
-                        <h5>10</h5>
+                        <h5 class="ten">10</h5>
                         <span>平原上的夏洛克</span>
                         <p>12.11万</p>
                     </a>
@@ -274,12 +274,187 @@
                 </div>
             </div>
             <!-- 最受期待 -->
-            <div class="have-the-call"></div>
-            <!-- 标题 -->
-            <!-- 内容 -->
-            <!-- 第一行 -->
+            <div class="have-the-call">
+                <!-- 标题 -->
+                <div class="have-the-call-title clearfix">
+                    <span>最受期待</span>
+                    <img src="./img/right-yellow.png" alt=""><a href="#">查看完整榜单</a>
+                </div>
+                <!-- 第一行 -->
+                <a class="have-the-call-one clearfix">
+                    <img src="./img/tangrenjietanan3.png" alt="">
+                    <div class="have-the-call-one-box">
+                        <h5>唐人街探案3</h5>
+                        <p>上映时间：2020-01-25</p>
+                        <span>756629人想看</span>
+                    </div>
+                </a>
+                <!-- 第二行 -->
+                <a class="have-the-call-one-box1">
+                    <img src="./img/jiangziya.png" alt="" width="172px" height="118px">
+                    <h3>姜子牙</h3>
+                    <span>249061人想看</span>
+                </a>
+                <a class="have-the-call-one-box1">
+                    <img src="./img/yewen.png" alt="" width="172px" height="118px">
+                    <h3>叶问4</h3>
+                    <span>388861人想看</span>
+                </a>
+                <!-- 内容 -->
+                <div class="have-the-call-content">
+                    <a href="" class="have-the-call-content-size">
+                        <h5>4</h5>
+                        <span>紧急救援</span>
+                        <p>160948人想看</p>
+                    </a>
+                    <a href="" class="have-the-call-content-size">
+                        <h5>5</h5>
+                        <span>若能与你共乘海浪之上</span>
+                        <p>94568人想看</p>
+                    </a>
+                    <a href="" class="have-the-call-content-size">
+                        <h5>6</h5>
+                        <span>宠爱</span>
+                        <p>79548人想看</p>
+                    </a>
+                    <a href="" class="have-the-call-content-size">
+                        <h5>7</h5>
+                        <span>囧妈</span>
+                        <p>107383人想看</p>
+                    </a>
+                    <a href="" class="have-the-call-content-size">
+                        <h5>8</h5>
+                        <span>中国女排</span>
+                        <p>93022人想看</p>
+                    </a>
+                    <a href="" class="have-the-call-content-size">
+                        <h5>9</h5>
+                        <span>误杀</span>
+                        <p>21734人想看</p>
+                    </a>
+                    <a href="" class="have-the-call-content-size">
+                        <h5 class="ten">10</h5>
+                        <span>唐顿庄园</span>
+                        <p>166674人想看</p>
+                    </a>
+                </div>
+            </div>
         </div>
     </div>
+    <!-- 正在热播 -->
+    <div class="now-movie">
+        <!-- 版心 -->
+        <div class="container">
+            <!-- 内容 -->
+            <div class="now-movie-content">
+                <!-- 标题 -->
+                <div class="now-movie-title">
+                    <span>热播电影</span>
+                    <a>爱情</a>
+                    <a>喜剧</a>
+                    <a>动作</a>
+                    <a>恐怖</a>
+                    <a>动画</a>
+                    <img src="./img/right-red.png" alt=""><a href="#">全部</a>
+                </div>
+                <!-- 下部分 -->
+                <div class="now-movie-content-bottom">
+                    <a href="">
+                        <span>唐人街探案</span>
+                        <h5>9.0</h5>
+                    </a>
+                    <a href="">
+                        <span>厉鬼将映</span>
+                        <h5>7.2</h5>
+                    </a>
+                    <a href="">
+                        <span>大圣归来</span>
+                        <h5>9.3</h5>
+                    </a>
+                    <a href="">
+                        <span>战狼</span>
+                        <h5>9.3</h5>
+                    </a>
+                    <a href="">
+                        <span>夏洛特烦恼</span>
+                        <h5>9.3</h5>
+                    </a>
+                    <a href="">
+                        <span>白日烈火</span>
+                        <h5>7.5</h5>
+                    </a>
+                    <a href="">
+                        <span>金钱帝国</span>
+                        <h5>6.0</h5>
+                    </a>
+                </div>
+            </div>
+            <!-- TOP100 -->
+            <div class="top">
+                <!-- 标题 -->
+                <div class="top-title">
+                    <span>TOP</span><span>100</span>
+                    <img src="./img/right-yellow.png" alt=""><a href="#">查看完整榜单</a>
+                </div>
+                <!-- 第一行 -->
+                <a class="top-one">
+                    <img src="./img/bawangbieji.png" alt="">
+                    <span>霸王别姬</span><br>
+                    <span>9.5分</span>
+                </a>
+                <!-- 内容 -->
+                <div class="top-content">
+                    <a href="" class="top-content-size">
+                        <h5>2</h5>
+                        <span>肖申克的救赎</span>
+                        <p>9.5分</p>
+                    </a>
+                    <a href="" class="top-content-size">
+                        <h5>3</h5>
+                        <span>罗马假日</span>
+                        <p>9.1分</p>
+                    </a>
+                    <a href="" class="top-content-size">
+                        <h5>4</h5>
+                        <span>这个杀手不太冷</span>
+                        <p>9.5分</p>
+                    </a>
+                    <a href="" class="top-content-size">
+                        <h5>5</h5>
+                        <span>泰坦尼克号</span>
+                        <p>9.5分</p>
+                    </a>
+                    <a href="" class="top-content-size">
+                        <h5>6</h5>
+                        <span>唐伯虎点秋香</span>
+                        <p>9.1分</p>
+                    </a>
+                    <a href="" class="top-content-size">
+                        <h5>7</h5>
+                        <span>乱世佳人</span>
+                        <p>9.1分</p>
+                    </a>
+                    <a href="" class="top-content-size">
+                        <h5>8</h5>
+                        <span>断魂蓝桥</span>
+                        <p>9.2分</p>
+                    </a>
+                    <a href="" class="top-content-size">
+                        <h5>9</h5>
+                        <span>天空之城</span>
+                        <p>9.0分</p>
+                    </a>
+                    <a href="" class="top-content-size">
+                        <h5 class="ten">10</h5>
+                        <span>辛德勒的名单</span>
+                        <p>9.2分</p>
+                    </a>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
 
 
 
