--- a/美团项目/index1.html
+++ b/美团项目/index1.html
@@ -451,9 +451,68 @@
                     </a>
                 </div>
             </div>
-
         </div>
     </div>
+    <!-- 关于猫眼 -->
+    <div class="maoyan-foot">
+        <!-- 版心 -->
+        <div class="container clearfix">
+            <!-- 标题 -->
+            <div class="maoyan-foot-title">
+                <span>关于猫眼 :</span>
+                <a href="">关于我们</a>
+                <a href="">管理团队<i>|</i></a>
+                <a href="">投资者关系<i>|</i></a>
+            </div>
+            <div class="maoyan-foot-title">
+                    <span>友情链接 : </span>
+                    <a href="">美团网</a>
+                    <a href="">格拉瓦<i>|</i></a>
+                    <a href="">美团下载<i>|</i></a>
+                    <a href="">欢喜首映<i>|</i></a>
+                </div>
+            <!-- 内容 -->
+            <div class="maoyan-foot-content">
+                <span>
+                        商务合作邮箱：v@maoyan.com 客服电话：10105335 违法和不良信息举报电话：4006018900
+                </span><br>
+
+                <span>
+                        用户投诉邮箱：tousujubao@meituan.com 舞弊线索举报邮箱：wubijubao@maoyan.com
+                </span><br>
+                <a>中华人民共和国增值电信业务经营许可证 京B2-20190350</a>
+                <a>营业性演出许可证 京演（机构）（2019）4094号<i>|</i></a><br>
+                <a>
+                        广播电视节目制作经营许可证 （京）字第08478号
+                </a>
+                <a>
+                        网络文化经营许可证 京网文（2019）3837-369号  <i>|</i>
+                </a><br>
+                <a></a>
+                <a>
+                        猫眼用户服务协议 
+                </a>
+                <a>
+                        猫眼平台交易规则总则 <i>|</i>
+                </a>
+                <a>
+                    隐私政策<i>|</i>
+                </a><br>
+                <a>
+                        京公网安备 11010102003232号
+                </a><br>
+                <span>
+                        北京猫眼文化传媒有限公司
+                </span><br>
+                <span>
+                        ©2016 猫眼电影 maoyan.com
+                </span><br>
+                <img src="./img/wangluowenhua.png" alt="">
+                <img src="./img/dianzijingying.png" alt="">
+            </div>
+        </div>
+    </div>
+
 
 
 
