--- a/美团项目/index1.html
+++ b/美团项目/index1.html
@@ -53,6 +53,10 @@
             </div>
         </div>
     </div>
+    <!-- 猫眼背景 -->
+    <div class="moive-beijing">
+        <img src="./img/moive-title.jpg" alt="">
+    </div>
     <!-- 正在热映 -->
     <div class="ishit">
         <!-- 版心 -->
@@ -500,7 +504,7 @@
                 </a><br>
                 <a>
                         京公网安备 11010102003232号
-                </a><br>  
+                </a><br>
                 <span> 
                         北京猫眼文化传媒有限公司
                 </span><br>
