--- a/美团项目/index2.html
+++ b/美团项目/index2.html
@@ -83,8 +83,26 @@
         <!-- 版心 -->
         <div class="container">
             <div class="teamwork-title">
-                <!-- <h3>优秀合作案例</h3> -->
+                <!-- 优秀合作案例标题 -->
                 <img src="./img/story.png" alt="">
+            </div>
+            <!-- 优秀合作案例背景图 -->
+            <div class="teamwork-photo">
+                <img src="./img/" alt="">
+              <div class="teamwork-left">
+              <a href="">
+                  <img src="" alt="">
+                <h2>美团外卖骑手人物：徐振</h2>
+                <h3>平凡之路上的英雄梦</h3>
+                <p>
+                 我觉得自从成了美团众包骑手之后，遇到了很多有趣新奇的人和事。以前我的 <br> 生活比较单调，上班、回家两点一线。加入美团众包后，认识了许多朋友，帮 <br> 助了一些人也得到了一些人的帮助。美团众包，为我的生活打开了一扇新的大 <br> 门。我喜欢它的弹性、自由，让我对生活有了更多的掌控......
+                </p>
+                <a href="" class="chakan">查看详细</a>
+              </a>
+              </div>
+              <div class="teamwork-right">
+                  <img src="./img/./story3.jpg" alt="">
+              </div>
             </div>
         </div>
     </div>
