--- a/美团项目/index.html
+++ b/美团项目/index.html
@@ -80,11 +80,11 @@
             </div>
             <!-- 美团功能 -->
             <div class="searchnav-bottom">
-                <a href="#">美团外卖</a>
+                <a href="index2.html">美团外卖</a>
                 <a href="index1.html">猫眼电影</a>
+                <a href="index3.html">商家入驻</a>
+                <a href="index4.html">民宿 / 公寓</a>
                 <a href="#">美团酒店</a>
-                <a href="#">民宿 / 公寓</a>
-                <a href="#">商家入驻</a>
                 <a href="#">美团公益</a>
             </div>
 
