--- a/美团项目/index2.html
+++ b/美团项目/index2.html
@@ -16,7 +16,8 @@
     <div class="header">
         <!-- 版心 -->
         <div class="container clearfix">
-            <!-- 左边 -->
+          <div class="header-title">
+                <!-- 左边 -->
             <div class="header-left">
                 <img src="./img/header-logo-white.png" alt="">
             </div>
@@ -31,6 +32,7 @@
                     <li><a href="">下载手机版</a></li>
                 </ul>
             </div>
+          </div>
 
         </div>
     </div>
@@ -91,7 +93,8 @@
                 <img src="./img/" alt="">
               <div class="teamwork-left">
               <a href="">
-                  <img src="" alt="">
+                  <img src="./img/story-l (2).png" alt="">
+                  <img src="./img/story-r.png" alt="">
                 <h2>美团外卖骑手人物：徐振</h2>
                 <h3>平凡之路上的英雄梦</h3>
                 <p>
@@ -104,8 +107,82 @@
                   <img src="./img/./story3.jpg" alt="">
               </div>
             </div>
+            <ul class="radius">
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
         </div>
     </div>
+    <!-- 媒体新闻报道 -->
+    <div class="news">
+        <!-- 版心 -->
+        <div class="container">
+            <!-- 标题 -->
+            <div class="news-title">
+                <img src="./img/news.png" alt="">
+            </div>
+            <!-- 左边 -->
+            <div class="news-left">
+                <div class="news-photo"></div>
+                <div class="news-content">
+                    <img src="./img/news5.jpg" alt="">
+                    <h2>美团上线闪购业务 以“快”破局助力零售升级</h2>
+                    <p>7月18日，美团点评举办“以快破局•助力零 <br> 售升级” 2018美团闪购发布会，正式上线美 <br> 团闪购业务，涵盖超市便利、生鲜果蔬、鲜 <br> 花绿植等众多品类，30分钟配送上门，24小时无间断配送。</p>
+                </div>
+            </div>
+            <!-- 右边 -->
+            <div class="news-right">
+                <h3>2019年度媒体报道</h3>
+                <a href="#"><img src="./img/number1.png" alt="">保障骑手安心无忧送餐路 美团外卖首发《骑手生活安全指南》</a>
+                <a href="#"><img src="./img/number2.png" alt="">MINISO名创优品正式入驻美团闪购 时尚单品30分钟送达</a>
+                <a href="#"><img src="./img/number3.png" alt="">专业食品安全检测团队进驻美团点评 从此舌尖安全有他们守护</a>
+                <a href="#"><img src="./img/number4.png" alt="">Trustdata发布2019上半年外卖份额数据 美团饿了么百度“631”格局三分天下</a>
+                <a href="#"><img src="./img/number5.png" alt="">美团上线闪购业务 以“快”破局助力零售升级</a>
+                <a href="#"><img src="./img/number6.png" alt="">美团城市新青年 外卖骑手正能量图鉴</a>
+                <a>全部报道 ></a>
+            </div>
+        </div>
+    </div>
+    <!-- 底部 -->
+    <footer>
+        <!-- 版心 -->
+        <div class="container clearfix">
+            <!-- 左边 -->
+            <div class="footer-left">
+                <ul class="part1">
+                    <li>开放平台</li>
+                    <li>媒体报道</li>
+                    <li>资质规则</li>
+                    <li>入住加盟</li>
+                </ul>
+                <ul class="part2">
+                    <li>常见问题</li>
+                    <li>用户反馈</li>
+                    <li>诚信举报</li>
+                    <li>加入我们</li>
+                </ul>
+            </div>
+            <!-- 中间 -->
+            <div class="footer-content">
+                <h3>品牌合作</h3>
+                <p>wpbg.marketing@meituan.com</p>
+                <h3>客服1010-9777</h3>
+                <p>周一至周日 9:00~23:00</p>
+                <p></p>
+            </div>
+            <!-- 右边 -->
+            <div class="footer-right">
+                <h3>更多商家，更多优惠</h3>
+                <img src="./img/qrcode-app.png" alt="">
+                <img src="./img/qrcode-wxapp.png" alt="">
+            </div>
+        </div>
+        <p>
+            北京三快在线科技有限公司
+            ©️ meituan.com 京ICP证070791号
+            京公网安备11010502025545号<img src="./img/backup.png" alt=""></p>
+    </footer>
 </body>
 
 </html>
